--- a/webapp/src/components/sidebar/sidebar.scss
+++ b/webapp/src/components/sidebar/sidebar.scss
@@ -85,15 +85,16 @@
         margin-bottom: 16px;
         height: 48px;
         align-items: center;
+        justify-content: space-between;
 
-        &:hover {
-            background-color: rgba(var(--sidebar-text-rgb), 0.08);
-        }
+        // &:hover {
+        //     background-color: rgba(var(--sidebar-text-rgb), 0.08);
+        // }
 
         > .heading {
             line-height: 30px;
             cursor: default;
-            flex-grow: 1;
+            // flex-grow: 1;
         }
 
         > .IconButton {
