--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -107,9 +107,9 @@ html {
 
     /* Main app */
 
-    .dragover {
-        background-color: rgba(128, 192, 255, 0.4);
-    }
+    // .dragover {
+    //     background-color: rgba(128, 192, 255, 0.4);
+    // }
 
     .octo-spacer {
         flex: 1;
