--- a/webapp/src/components/kanban/kanbanCard.scss
+++ b/webapp/src/components/kanban/kanbanCard.scss
@@ -5,11 +5,12 @@
     flex-direction: column;
     align-items: flex-start;
     overflow-wrap: anywhere;
-    border-radius: 4px;
-    margin-bottom: 16px;
+    border-radius: 8px;
+    margin-bottom: 10px;
     padding: 12px 16px;
-    box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
-        rgba(var(--center-channel-color-rgb), 0.1) 0 2px 4px;
+    background-color: #22272C;
+    // box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
+    //     rgba(var(--center-channel-color-rgb), 0.1) 0 2px 4px;
 
     cursor: pointer;
     color: rgb(var(--center-channel-color-rgb));
@@ -54,6 +55,14 @@
             padding: 0;
             margin: 0;
         }
+    }
+
+    .label {
+        height: 7px;
+        width: 40px;
+        background-color: transparent; 
+        border-radius: 4px;
+        margin-bottom: 5px;
     }
 
     .octo-icontitle {
