--- a/webapp/src/components/kanban/kanbanColumn.scss
+++ b/webapp/src/components/kanban/kanbanColumn.scss
@@ -1,5 +1,12 @@
-.octo-board-column {
-    &.dragover {
-        background-color: rgba(128, 192, 255, 0.15);
-    }
+// .octo-board-column {
+//     &.dragover {
+//         background-color: rgba(128, 192, 255, 0.15);
+//     }
+// }
+
+.octo-board-column-single {
+    background-color: #101204;
+    padding: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
