some design changes

--- a/webapp/src/components/kanban/kanban.scss
+++ b/webapp/src/components/kanban/kanban.scss
@@ -34,6 +34,8 @@
             width: 220px;
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
+            background-color: #FFFFFF;
+            opacity: 20%;
         }
 
         > div {
