adjusted the react-beautiful logic

--- a/webapp/src/components/kanban/kanban.scss
+++ b/webapp/src/components/kanban/kanban.scss
@@ -36,6 +36,7 @@
             border-bottom-right-radius: 10px;
             background-color: #FFFFFF;
             opacity: 20%;
+            max-height: 44px;
         }
 
         > div {
