--- a/webapp/src/components/kanban/kanbanColumn.scss
+++ b/webapp/src/components/kanban/kanbanColumn.scss
@@ -1,6 +1,7 @@
 // .octo-board-column {
 //     &.dragover {
-//         background-color: rgba(128, 192, 255, 0.15);
+//         outline: -webkit-focus-ring-color auto 1px;
+//         border-radius: 10px;
 //     }
 // }
 
