--- a/webapp/src/components/kanban/kanban.scss
+++ b/webapp/src/components/kanban/kanban.scss
@@ -14,8 +14,18 @@
         // padding: 16px 0;
         color: #909090;
         position: sticky;
-        top: 0;
+        top: 2px;
         background: rgb(var(--center-channel-bg-rgb));
+
+        .drag-column {
+            margin-right: 15px;
+
+            &.drag-over-active {
+                outline: -webkit-focus-ring-color auto 1px;
+                border-radius: 10px;
+            }
+        }
+        
     }
 
     .octo-board-header-cell {
@@ -23,7 +33,7 @@
         flex-shrink: 0;
         align-items: center;
         width: 260px;
-        margin-right: 15px;
+        // margin-right: 15px;
         vertical-align: middle;
         background-color: #101204;
         padding: 10px;
@@ -91,7 +101,7 @@
         flex-direction: column;
 
         width: 260px;
-        margin-right: 15px;
+        // margin-right: 15px;
 
         &.narrow {
             width: 220px;
