--- a/webapp/src/components/kanban/kanbanCard.scss
+++ b/webapp/src/components/kanban/kanbanCard.scss
@@ -9,8 +9,6 @@
     margin-bottom: 10px;
     padding: 12px 16px;
     background-color: #22272C;
-    // box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
-    //     rgba(var(--center-channel-color-rgb), 0.1) 0 2px 4px;
 
     cursor: pointer;
     color: rgb(var(--center-channel-color-rgb));
@@ -32,6 +30,10 @@
     &.selected {
         background-color: rgba(90, 200, 255, 0.2);
     }
+
+    // &.dragging {
+    //     transform: rotate(5deg);
+    // }
 
     .optionsMenu {
         background: rgb(var(--center-channel-bg-rgb));
