some code refactor

--- a/webapp/src/components/kanban/kanbanCard.scss
+++ b/webapp/src/components/kanban/kanbanCard.scss
@@ -36,7 +36,8 @@
     // }
 
     .optionsMenu {
-        background: rgb(var(--center-channel-bg-rgb));
+        // background: rgb(var(--center-channel-bg-rgb));
+        background: #22272C;
         display: none;
         position: absolute;
         right: 12px;
