--- a/webapp/src/widgets/menu/menu.scss
+++ b/webapp/src/widgets/menu/menu.scss
@@ -1,7 +1,7 @@
 @import '../../styles/z-index';
 
 .Menu.noselect {
-    @include z-index(menu);
+    // @include z-index(menu);
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -12,6 +12,7 @@
     box-shadow: var(--elevation-4);
     max-width: 320px;
     cursor: default;
+    z-index: 999 !important;
 
     &.fixed {
         position: fixed;
