--- a/webapp/src/components/cardDetail/cardDetail.scss
+++ b/webapp/src/components/cardDetail/cardDetail.scss
@@ -155,6 +155,7 @@
 
     &.content-blocks {
         position: relative;
+        width: 100%;
 
         &:hover,
         &:focus-within {
@@ -166,7 +167,7 @@
         }
 
         .CardDetailContentsMenu {
-            margin-left: 48px;
+            // margin-left: 48px;
 
             .Button {
                 opacity: 0;
