changed the comments section, starting the database changes on another branch

--- a/webapp/src/components/cardDetail/cardDetail.scss
+++ b/webapp/src/components/cardDetail/cardDetail.scss
@@ -231,3 +231,11 @@
         width: 100%;
     }
 }
+
+.Comments-section {
+    max-width: 300px;
+    width: 100%;
+    background-color: #3F474F;
+    border-left: 1px solid #6A6F78;
+    position: relative;
+}
